[tool.poetry]
name = "fabsite"
version = "2022.1001-alpha"
description = "A static site generator building on makesite.py"
authors = ["Brian Wisti <brianwisti@pobox.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
commonmark = "^0.9.1"
fabric = "^2.6.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
rich = "^12.0.0"
toml = "^0.10.2"
coverage = {extras = ["toml"], version = "^6.3.2"}

[tool.poetry.dev-dependencies]
bumpver = "^2022.1116"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
# Check for untested branches?
branch = true

include = ["fabsite.py"]

[tool.coverage.report]
# Show line numbers of untested blocks?
show_missing = true

# Skip reporting files with 100% coverage?
skip_covered = false

[tool.bumpver]
current_version = "2022.1001-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"makesite.py" = [
  '__version__ = "{version}"',
]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"README.md" = [
    ": {version}",
    "{pep440_version}",
]

